--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   position: relative;
   min-height: 100vh;
   font-family: Arial, sans-serif;
+  scroll-behavior: smooth;
 }
 
 body::before {
@@ -21,7 +22,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('Imag/1images.jpg');
+  background-image: url(01pagina.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -87,8 +88,11 @@ nav ul li a:hover::after {
   width: 100%;
 }
 
+section{
+  scroll-margin-top: 90px;
+}
 
-.hero {
+.inicio {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -97,20 +101,20 @@ nav ul li a:hover::after {
   padding: 0 20px;
 }
 
-.hero-content {
+.inicio-content {
   background: rgba(0, 20, 40, 0.6);
   padding: 40px;
   border-radius: 15px;
   box-shadow: 0 0 25px rgba(77, 195, 255, 0.3);
 }
 
-.hero h1 {
+.inicio h1 {
   font-size: 3rem;
   margin-bottom: 15px;
   color: #4dc3ff;
 }
 
-.hero p {
+.inicio p {
   font-size: 1.2rem;
   margin-bottom: 25px;
 }
@@ -339,10 +343,7 @@ nav ul li a:hover::after {
 
 
 
-
-
-
-/* Seção Depoimentos - fundo escuro */
+/* Depoimentos */
 
 
 
@@ -437,7 +438,7 @@ nav ul li a:hover::after {
 
 
 
-/* --- SEÇÃO CONTATO --- */
+/* ---  CONTATO --- */
 .contato {
   padding: 50px 10%;
   background-color: #f5f9ff; 
@@ -474,6 +475,17 @@ nav ul li a:hover::after {
   border: none;
   border-radius: 8px;
   cursor: pointer;
+
+  font-weight: 600;
+  box-shadow: 0 5px 15px rgba(10,25,47,0.3);
+  transition: all 0.3s ease;
+}
+
+.contato-formulario form .btn:hover {
+  background-color: #4dc3ff; 
+  color: #fff;
+  box-shadow: 0 8px 20px rgba(77,195,255,0.5); 
+  transform: translateY(-3px); 
 }
 
 .contato-imagem {
